<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callLog"
            type="com.hcs.calldemo.entity.CallLogBo" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/friend_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:contentPaddingBottom="15dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_group_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_log_id"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_group_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_group_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_group_key"
                android:singleLine="true"
                android:text="@{callLog.callId}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_call_dir_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_group_value"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_group_value"
                android:text="@string/call_log_dir"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_call_dir_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_call_dir_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_call_dir_key"
                android:singleLine="true"
                android:text="@{callLog.callDir}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_status_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_call_dir_value"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_call_dir_value"
                android:text="@string/call_log_status"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_status_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_status_key"
                android:singleLine="true"
                android:text="@{callLog.callStatus}"
                android:textColor="#222222"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/txt_duration_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_status_value"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_status_value"
                android:text="@string/call_log_duration"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_duration_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_duration_key"
                android:singleLine="true"
                android:text="@{callLog.duration}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_phone_no_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/txt_group_key"
                android:text="@string/call_log_remote"
                android:textColor="#888888"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/txt_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_phone_no_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_phone_no_key"
                android:singleLine="true"
                android:textColor="#222222"
                android:textSize="15sp"
                android:text="@{callLog.remoteAddress}"
                />

            <TextView
                android:id="@+id/txt_address_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_phone_no_key"
                android:layout_marginTop="4dp"
                android:text="@string/call_log_local"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_news_detail_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_address_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_address_key"
                android:singleLine="true"
                android:text="@{callLog.localAddress}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_display_name_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_address_key"
                android:layout_marginTop="4dp"
                android:text="@string/call_log_time"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_display_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_display_name_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_display_name_key"
                android:singleLine="true"
                android:text="@{callLog.startTime}"
                android:textColor="#222222"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_record_file_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_display_name_key"
                android:layout_marginTop="4dp"
                android:text="@string/call_log_record_file"
                android:textColor="#888888"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_record_file_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_record_file_key"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/txt_record_file_key"
                android:singleLine="true"
                android:text="@{callLog.callRef}"
                android:textColor="#222222"
                android:textSize="15sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>